kubernetes/ingress/2-traefik.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: kube-ingress
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: registry.jahiduls.mint/traefik:2.5
          imagePullPolicy: Always
          args:
            - --api=true
            - --api.dashboard=true
            # - --api.insecure=true
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --entrypoints.websecure.http.tls
            - --entrypoints.traefik.address=:8080
            # - --providers.kubernetesingress=true
            - --providers.kubernetescrd=true
            - --providers.file.directory=/configuration
            - --providers.file.watch=true

          ports:
            - name: web
              containerPort: 80
            - name: websecure
              containerPort: 443
            - name: traefik
              containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: kube-ingress

spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
    - protocol: TCP
      port: 443
      name: websecure
      targetPort: 443
