kubernetes/ingress/3-traefik-dashboard-ingress.yaml
# kubectl port-forward <traefik pod> 8080:8080

apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik-system

spec:
  type: ClusterIP
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 8080

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: traefik-dashboard
  namespace: traefik-system
  annotations: 
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
  - host: traefik.jahiduls.kube
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  traefik-dashboard
            port:
              number: 80
